--- a/exploration/E_02/EP.2 유방암 분류기 .ipynb
+++ b/exploration/E_02/EP.2 유방암 분류기 .ipynb
@@ -23,16 +23,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ssac11/anaconda3/envs/aiffel/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_breast_cancer \n",
     "from sklearn.model_selection import train_test_split\n",
@@ -48,25 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename'])\n",
-      "['mean radius' 'mean texture' 'mean perimeter' 'mean area'\n",
-      " 'mean smoothness' 'mean compactness' 'mean concavity'\n",
-      " 'mean concave points' 'mean symmetry' 'mean fractal dimension'\n",
-      " 'radius error' 'texture error' 'perimeter error' 'area error'\n",
-      " 'smoothness error' 'compactness error' 'concavity error'\n",
-      " 'concave points error' 'symmetry error' 'fractal dimension error'\n",
-      " 'worst radius' 'worst texture' 'worst perimeter' 'worst area'\n",
-      " 'worst smoothness' 'worst compactness' 'worst concavity'\n",
-      " 'worst concave points' 'worst symmetry' 'worst fractal dimension']\n",
-      "2\n",
-      "['malignant' 'benign']\n"
+      "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename'])\n"
      ]
     }
    ],
@@ -86,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +629,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1029,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1058,7 @@
        "<AxesSubplot:xlabel='label', ylabel='mean radius'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1110,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1244,12 +1224,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      1.00      0.87        43\n",
-      "           1       1.00      0.82      0.90        71\n",
+      "           0       0.83      1.00      0.91        43\n",
+      "           1       1.00      0.87      0.93        71\n",
       "\n",
-      "    accuracy                           0.89       114\n",
-      "   macro avg       0.88      0.91      0.88       114\n",
-      "weighted avg       0.91      0.89      0.89       114\n",
+      "    accuracy                           0.92       114\n",
+      "   macro avg       0.91      0.94      0.92       114\n",
+      "weighted avg       0.93      0.92      0.92       114\n",
       "\n"
      ]
     }
@@ -1271,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1280,12 +1260,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      0.91      0.94        43\n",
-      "           1       0.95      0.99      0.97        71\n",
+      "           0       0.95      0.88      0.92        43\n",
+      "           1       0.93      0.97      0.95        71\n",
       "\n",
-      "    accuracy                           0.96       114\n",
-      "   macro avg       0.96      0.95      0.95       114\n",
-      "weighted avg       0.96      0.96      0.96       114\n",
+      "    accuracy                           0.94       114\n",
+      "   macro avg       0.94      0.93      0.93       114\n",
+      "weighted avg       0.94      0.94      0.94       114\n",
       "\n"
      ]
     },
@@ -1306,7 +1286,7 @@
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "lr = LogisticRegression()\n",
+    "lr = LogisticRegression(max_iter=10, random_state=42)\n",
     "lr.fit(x_train,y_train)\n",
     "y_pred = lr.predict(x_test)\n",
     "print(classification_report(y_test,y_pred))"
@@ -1314,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
