--- a/fundamental/3주차/F_04. 텍스트의 다양한 변신(문자열,파일 다루기).ipynb
+++ b/fundamental/3주차/F_04. 텍스트의 다양한 변신(문자열,파일 다루기).ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +40,13 @@
     "ur_str = 'you\\'re welcome'\n",
     "\n",
     "print(my_str)\n",
-    "print(type(ur_str))"
+    "print(type(ur_str))\n",
+    "a = [1,2,'a','b']"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 인코딩과 디코딩 \n",
     "\n",
@@ -61,8 +60,314 @@
     "문자에 해당하는 것을 숫자로 매핑하고 해당숫자를 이진수로 표현하는데 국가마다 다르면 안되니깐 iso가 유니코드를 만들었음   \n",
     "\n",
     "UTF-8,UTF-16: 유니코드에 정의된 텍스트를 메모리에 인코딩하는 방식을 나타냄  \n",
-    "\n"
+    "\n",
+    "+ UTF-8: 영어사용하기 좋고, 대세\n",
+    "+ UTF-16: 3byte인 한글 사용하기 좋음 최소 2byte사용 \n",
+    "+ python3 인코딩시 UTF-8로 저장됩니다. 2는 문자열을 유니코드, 문자열 이렇게 구분했지만, 3부터는 그럴 필요가 없어요. 그래서 인코딩,디코딩 되어있는지만 확인하면 됩니다. \n",
+    "\n",
+    "+ `ord()`: 문자 > 유니코드 \n",
+    "+ `chr()`: 유니코드 숫자 > 문자"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'가'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#d유니코드로 변환\n",
+    "ord('가')\n",
+    "#문자로 반환\n",
+    "chr(44032)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "<class 'int'>\n",
+      "<class 'str'>\n",
+      "가\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ord('a'))\n",
+    "print(type(ord('A')))\n",
+    "print(type(chr(97)))\n",
+    "print(chr(0xAC00))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4-3. 텍스트 데이터를 문자열로 저장한다는 것(2) 문자열 다루기 \n",
+    "\n",
+    "### 이스케이프 문자\n",
+    "\n",
+    "+ \\' : 작은따옴표 넣기 \n",
+    "+ \\\" : 큰따옴표로 둘러싸인 문자열에 큰 따옴표 사용하기 \n",
+    "+ \\\\ : 문자열에서 백슬러시 사용시 두번적어줘야해~ \n",
+    "+ \\t : 탭사용  \n",
+    "+ \\n : 한줄 띄어쓰기 \n",
+    "    \n",
+    "`ㄴ = 'i don\\'t like python'`\n",
+    "\n",
+    "`print(ㄴ)` \n",
+    "\n",
+    "+ 원시문자열이란: 이스케이프 문자도 다 보여주는 것이다. 문자열 사용전 r\"/t 이렇게 다 써준다.\"\n",
+    "\n",
+    "### endswitch, startswitch\n",
+    "\n",
+    "+ `이미지.endswith('.png')` : 끝글자가 png 인 것만 찾아주세요~! \n",
+    "+ `이미지.startswith('ob') : 시작글자  ob인 거 찾아주세요~! \n",
+    "\n",
+    "### trimming (문자열 가꾸기)\n",
+    "\n",
+    "+ 공백문자 제거: strip(), 오른쪽은 rstrip(), 왼쪽은 lstrip()\n",
+    "+ 대소문자 관련: .upper()모든문자 대문자, .lower()모든문자 소문자, .capitalize()첫글자 대문자 \n",
+    "+ isX: bool값으로 반환해줍니다. \n",
+    "    + isupper(): 문자열에 모두 대문자라면 True\n",
+    "    + islower(): 문자열이 모두 소문자라면 True\n",
+    "    + isalpha(): 문자열에 모두 영어라면 True\n",
+    "    + isalnum(): 문자열에 숫자와 영어만 있다면 True\n",
+    "    + isdecimal(): 문자열에 숫자만 있다면 True\n",
+    "    + istitle(): 문자열 첫글자가 대문자라면 True\n",
+    "+ ().join과 split()\n",
+    "    + `(',').join(a)`: join은 튜플, 리스트,스트링 반복가능한 객체에서 사용가능합니다. 문자열로 반환을 합니다. 요소들을 하나로 합쳐줍니다. \n",
+    "    + .split(','): 요소를 괄호안에 있는 기호로 나누어 줍니다. 리스트로 반환합니다. \n",
+    "+ replace(a,b): 문자열에서만 사용가능합니다. 문자열에 a를 b로 바꿔줍니다. \n",
+    "\n",
+    "### 불변(immutable)의 문자열\n",
+    "\n",
+    "+ mutable: 가변은 list,set,dict형태\n",
+    "\n",
+    "아래에서 코드를 확인합시다~!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I fell into AIFFEL\n",
+      "140295782710448\n",
+      "I fell into AIFFEL\n",
+      "140295782710448\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = 'I fell into AIFFEL'\n",
+    "print(sent)\n",
+    "print(id(sent))\n",
+    "sent.upper()\n",
+    "print(sent)\n",
+    "print(id(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I fell into AIFFEL\n",
+      "140295782752704\n",
+      "I FELL INTO AIFFEL\n",
+      "140295782710448\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = 'I fell into AIFFEL'\n",
+    "print(sent)\n",
+    "print(id(sent))\n",
+    "sent = sent.upper() # sent라는 변수에 수정사항을 다시 할당해주면 id도 바뀝니다. 예전의 sent는 내가 아니야~! 라는 거죠! immutable \n",
+    "print(sent)\n",
+    "print(id(sent))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "140295782727584\n",
+      "[1, 2, 3, 4, 5, 1]\n",
+      "140295782727584\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent1 =[1,2,3,4,5]\n",
+    "print(sent1)\n",
+    "print(id(sent1))\n",
+    "sent =sent1.append(1) #mutable sent는 수정사항이 있어도 예전에 그건 나야!라고 해주는 거죠~!\n",
+    "print(sent1)\n",
+    "print(id(sent1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4-4. 텍스트 데이터를 문자열로 저장한다는 것(3)정규 표현식 \n",
+    "\n",
+    "정규표현식이란 모든 운영체제, 문서에서 사용할 수 있는 것. \n",
+    "\n",
+    "### 정규표현식 사용하기\n",
+    "\n",
+    "1) `import re` 정규 표현식 불러오기 \n",
+    "\n",
+    "2) pattern = re.compile(r'\\d\\d\\d-\\d\\d\\d\\d-\\d\\d\\d\\d') : 패턴찾기 \n",
+    "\n",
+    "3) pattern.findall(메소드사용): 메소드 사용하기 \n",
+    "\n",
+    "    + 메소드 \n",
+    "        + search(): 일치하는 패턴찾기 \n",
+    "        + findall(): 일치값 반환\n",
+    "        + sub(a,b): a를 b로 대체하기 \n",
+    "        + split(): 쪼개기 \n",
+    "        + group(): 실제 결과에 해당하는 문자열을 반환하기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "010-111-1111\n",
+      "------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#- 전화번호(숫자, 기호)\n",
+    "import re\n",
+    "phonenumber = re.compile(r'\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d')\n",
+    "phone = phonenumber.search('This is my phone number 010-111-1111')\n",
+    "if phone:\n",
+    "  print(phone.group())\n",
+    "print('------')\n",
+    "phone = phonenumber.match ('This is my phone number 010-111-1111') #시작부터 일치해야 출력이 됩니다. \n",
+    "if phone:\n",
+    "  print(phone.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1993', '1995', '2019', '2000', '2002', '2013', '2015', '2017']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#- 연도(숫자)\n",
+    "text = \"\"\"\n",
+    "The first season of America Premiere League  was played in 1993. \n",
+    "The second season was played in 1995 in South Africa. \n",
+    "Last season was played in 2019 and won by Chennai Super Kings (CSK).\n",
+    "CSK won the title in 2000 and 2002 as well.\n",
+    "Mumbai Indians (MI) has also won the title 3 times in 2013, 2015 and 2017.\n",
+    "\"\"\"\n",
+    "pattern = re.compile(\"[1-2]\\d\\d\\d\") #첫글짜는 1-2로 시작하면서 뒤가 3자리 더 있는 패턴 총 4글자 \n",
+    "pattern.findall(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write mode \n",
+    "\n",
+    "f = open('minje.txt','w')\n",
+    "\n",
+    "for i in range(10):\n",
+    "    f.write('안녕') # print(f.write('안녕')) 으로 출력하면 왜 2가 10번 나오는지 모르겠어요~\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕안녕안녕안녕안녕안녕안녕안녕안녕안녕\n"
+     ]
+    }
+   ],
+   "source": [
+    " #read mode\n",
+    "\n",
+    "with open('minje.txt','r')as f:\n",
+    "    print(f.read())\n",
+    "    \n",
+    "#with와 함께하는 open은 f.close를 사용하지 않아도 됩니다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
