Update E_6P.  멋진 작사가 만들기 .ipynb

--- a/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
+++ b/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
@@ -752,9 +752,52 @@
     "\n"
    ]
   },
-  
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style> .container{width:90% !important;}</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style> .container{width:90% !important;}</style>\"))"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "aiffel",
+   "language": "python",
+   "name": "aiffel"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
 
 
