Update E_6P.  멋진 작사가 만들기 .ipynb

--- a/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
+++ b/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
@@ -7,12 +7,12 @@
     "# 프로젝트 - 작사가 만들기\n",
     "\n",
     "### 평가항목\n",
-    "#### 텍스트 제너리이션 결과가 그럴듯한 문장으로 생성되는가?\n"
-    "나름 꽤 된듯..한딩...\n"
-    "#### 특수문자 제거, 토크나이저 생성, 패딩처리 등의 과정이 빠짐없이 진행되었는가?\n"
-    " 넹\n"
-    "#### 텍스트 생성모델의 validation loss가 2.2 이하인가?\n"
-    " 네. 1.9\n"
+    "#### 텍스트 제너리이션 결과가 그럴듯한 문장으로 생성되는가?\n",
+    "나름 꽤 된듯..한딩...\n",
+    "#### 특수문자 제거, 토크나이저 생성, 패딩처리 등의 과정이 빠짐없이 진행되었는가?\n",
+    " 넹\n",
+    "#### 텍스트 생성모델의 validation loss가 2.2 이하인가?\n",
+    " 네. 1.9\n",
     "\n",
     "\n",
     "## 1. 데이터 다운로드\n",
