Update E_6P.  멋진 작사가 만들기 .ipynb

--- a/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
+++ b/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
@@ -580,7 +580,7 @@
     "    for word_index in test_tensor[0].numpy():\n",
     "        generated += tokenizer.index_word[word_index] + \" \"\n",
     "    \n",
-    "    return generated # 이것이 최종적으로 모델이 생성한 자연어 문장입니다."
+    "    return generated # 이것이 ."
    ]
   },
   {
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "뭔가 웃기죠? 한번 더 시도해봅시다."
+    "지금은 쪼금 부자연스럽네요~! 다시!!."
    ]
   },
   {
@@ -756,7 +756,11 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "재밌는 작사가 만들기 프로젝트를 해보았습니다. 'ㅅ'~ 생각보다 재밌는 문장을 말하네요! 저보다 더 감성적인 것 같습니다. :)\n",
+    "생각보다 꽤 그럴싸하게 나와서 신기했습니다. 이게 참..전처리나 그런건 어렵지만, 모델이 학습하고 나올 때의 쾌감이 짜릿합니다! :)\n",
+    "### 다음에 이 노드를 하게된다면?\n",
+    " 1. 전처리를 조금 더 신경 써본다.\n",
+    " 2. 다른 모델을 사용해 본다.\n",
+    " 3. 옵션의 기능들을 좀 더 세심하게 보고자 합니다!\n",
     "\n"
    ]
   },
