Update E_6P.  멋진 작사가 만들기 .ipynb

--- a/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
+++ b/exploration/E_6/E_6P.  멋진 작사가 만들기 .ipynb
@@ -19,7 +19,7 @@
     "\n",
     "아래 링크에서 데이터를 다운받아 봅시다.\n",
     "\n",
-    "- <https://www.kaggle.com/paultimothymooney/poetry/data>"
+ "- <https://www.kaggle.com/paultimothymooney/poetry/data>"
    ]
   },
   {
@@ -580,7 +580,7 @@
     "    for word_index in test_tensor[0].numpy():\n",
     "        generated += tokenizer.index_word[word_index] + \" \"\n",
     "    \n",
-    "    return generated # 이것이 ."
+    "    return generated # 이것이 최종적으로 모델이 생성한 자연어 문장입니다."
    ]
   },
   {
@@ -607,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "지금은 쪼금 부자연스럽네요~! 다시!!."
+    "뭔가 웃기죠? 한번 더 시도해봅시다."
    ]
   },
   {
