--- a/exploration/E_06/E_6. 작사가 인공지능 만들기 .ipynb
+++ b/exploration/E_06/E_6. 작사가 인공지능 만들기 .ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "spread-receptor",
+   "cell_type": "markdown",
+   "id": "norwegian-vertex",
    "metadata": {},
-   "outputs": [],
    "source": [
     "이번 노드에서는 인공지능이 문장을 이해하는 방식과 작문을 가르치는 법을 배울 것입니다. \n",
     "\n",
@@ -26,6 +24,17 @@
     "확률이 높다는 것은 자연스럽다는 의미입니다. \n",
     "처음에 나는은 어떻게 생성을 하는가요?\n",
     "<start>라는 것을 써서 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rotary-conservative",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "self.rnn_1 = tf.keras.layers.LSTM(hidden_size, retrun_sequences=True)\n",
+    "self.rnn_2 = tf.keras.layers.LSTM(hidden_size, return_sequences=True, dropout=0.3)"
    ]
   }
  ],
