--- a/exploration/E_10/E_10. 인물사진을 만들어보자 .ipynb
+++ b/exploration/E_10/E_10. 인물사진을 만들어보자 .ipynb
@@ -70,7 +70,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "unable-double",
    "metadata": {},
@@ -78,6 +77,7 @@
     "# 세그멘테이션으로 사람 분리하기 \n",
     "![image](https://user-images.githubusercontent.com/68840414/108790657-9b068b00-75c0-11eb-9a05-9b1dddbc115e.png)\n",
     "\n",
+    "segmentation은 input이미지의 \n",
     "* instance segmentation : 같은 클래스 분류 \n",
     "* semantic segmentaion: 같은 클래스 분류 하지 않음\n",
     "\n",
@@ -93,12 +93,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "solar-biodiversity",
+   "metadata": {},
+   "source": [
+    "#### 질문: 인스턴스 세그멘테이션 데이터 셋에 라벨이 존재한다면 시맨틱 세그멘테이션을 학습시킬 수 있을까요?\n",
+    "인스턴스 id뿐만 아니라 클래스 라벨이 존재해야 시맨틱 세그멘테이션이 학습이 가능합니다. 그러나 대부분의 데이터셋은 인스턴스 라벨이 있는 경우 클래스 라벨도 함께 존재합니다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "going-kitchen",
+   "metadata": {},
+   "source": [
+    "이미지 세그멘테이션의 간단한 알고리즘: 워터쉐드 세그멘테이션(watershed segmentation)\n",
+    "\n",
+    "특징: 경계를 또렷하게 보이기 위해서 grmayscale로 변환하여 0~255의 값을 가집니다. 픽셀값을 사용해서 각 위치의 높낮이를 구분하는데 낮은 부분부터 서서히 \n",
+    "    '물'을 채워 나간다고 생각할 때 각 영역에서 점점 물이 차 오느라다 넘치는 지점이 생기고, 그 부분을 경계선으로 만들면 물체를 서로 구분 할 수 있게 됩니다. \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "varied-sheriff",
+   "metadata": {},
+   "source": [
+    "#segmentation FCN, SegNet, U-net등 많은 모델이 있지만 여기서는 DeepLab v3+를 사용합니다. \n",
+    "\n",
+    "FCN: 2014년 논문 pixel level classification  pooling으로 인해 해상도가 감소했는데 , skip connection을 사용하였다. \n",
+    "\n",
+    "DeepLab v3+ 성능표\n",
+    "\n",
+    "![image](https://user-images.githubusercontent.com/68840414/109092565-1fd8dc80-775a-11eb-947b-d17ca7f2af7d.png)\n",
+    "\n",
+    "\n",
+    "atrous convolution을 사용하는 이유는?\n",
+    "depthwise separable convolution이 효율적인 이유는? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brutal-carroll",
+   "id": "accredited-paradise",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#deep lab 모델 클래스를 가져옵니다. \n",
+    "\n",
+    "class DeepLabModel(object):\n",
+    "    INPUT_TENSOR_NAME = 'ImageTensor:0'\n",
+    "    OUTPUT_TENSOR_NAME = 'SemanticPredictions:0'\n",
+    "    INPUT_SIZE = 513\n",
+    "    FROZEN_GRAPH_NAME = 'frozen_inference_graph'\n",
+    "\n",
+    "    # __init__()에서 모델 구조를 직접 구현하는 대신, tar file에서 읽어들인 그래프구조 graph_def를 \n",
+    "    # tf.compat.v1.import_graph_def를 통해 불러들여 활용하게 됩니다. \n",
+    "    def __init__(self, tarball_path):\n",
+    "        self.graph = tf.Graph()\n",
+    "        graph_def = None\n",
+    "        tar_file = tarfile.open(tarball_path)\n",
+    "        for tar_info in tar_file.getmembers():\n",
+    "            if self.FROZEN_GRAPH_NAME in os.path.basename(tar_info.name):\n",
+    "                file_handle = tar_file.extractfile(tar_info)\n",
+    "                graph_def = tf.compat.v1.GraphDef.FromString(file_handle.read())\n",
+    "                break\n",
+    "        tar_file.close()\n",
+    "\n",
+    "        with self.graph.as_default():\n",
+    "    \t    tf.compat.v1.import_graph_def(graph_def, name='')\n",
+    "\n",
+    "        self.sess = tf.compat.v1.Session(graph=self.graph)\n",
+    "\n",
+    "    # 이미지를 전처리하여 Tensorflow 입력으로 사용 가능한 shape의 Numpy Array로 변환합니다.\n",
+    "    def preprocess(self, img_orig):\n",
+    "        height, width = img_orig.shape[:2]\n",
+    "        resize_ratio = 1.0 * self.INPUT_SIZE / max(width, height)\n",
+    "        target_size = (int(resize_ratio * width), int(resize_ratio * height))\n",
+    "        resized_image = cv2.resize(img_orig, target_size)\n",
+    "        resized_rgb = cv2.cvtColor(resized_image, cv2.COLOR_BGR2RGB)\n",
+    "        img_input = resized_rgb\n",
+    "        return img_input\n",
+    "        \n",
+    "    def run(self, image):\n",
+    "        img_input = self.preprocess(image)\n",
+    "\n",
+    "        # Tensorflow V1에서는 model(input) 방식이 아니라 sess.run(feed_dict={input...}) 방식을 활용합니다.\n",
+    "        batch_seg_map = self.sess.run(\n",
+    "            self.OUTPUT_TENSOR_NAME,\n",
+    "            feed_dict={self.INPUT_TENSOR_NAME: [img_input]})\n",
+    "\n",
+    "        seg_map = batch_seg_map[0]\n",
+    "        return cv2.cvtColor(img_input, cv2.COLOR_RGB2BGR), seg_map"
+   ]
   }
  ],
  "metadata": {
