--- a/exploration/E_12/EP_12 CIFAR_10이미지 생성하기 .ipynb
+++ b/exploration/E_12/EP_12 CIFAR_10이미지 생성하기 .ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "geological-renaissance",
+   "id": "choice-latter",
    "metadata": {},
    "source": [
     "# 2014년 이안굿펠로우가 씀ㅎ \n",
@@ -83,7 +83,7 @@
     "\n",
     "cifar10 = tf.keras.datasets.cifar10\n",
     "\n",
-    "(train_x, _), (test_x, _) = cifar10.load_data() #분류와 달리  y_train, y_test가 필요하지 않습니다. 왜??? 그래서 언더스코드로 데이터를 무시합니다.\n",
+    "(train_x, _), (test_x, _) = cifar10.load_data() #분류와 달리  y_train, y_test가 필요하지 않습니다. 그래서 언더스코드로 데이터를 무시합니다.\n",
     "\n",
     "train_x.shape"
    ]
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "upset-content",
+   "id": "expensive-extraction",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "wanted-demand",
+   "id": "wicked-spray",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
     "    plt.axis('off') #축제거 눈금 제거된당\n",
     "\n",
     "plt.show()\n",
-    "\n",
+    "#-1~1로 나오니깐!ㅎ 정규화시켜준다!ㅎ\n",
     "# Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers). +1/2.0을 하지 않으면 나옴\n",
     "# 이 에러가 뜨면 이미지 값들이 모두 1로 변환되어 합쳐진다고 한다. 그래서 1을 더하고 /2.0을 나눠봤다. 그러면 그대로 일텐데..에러가 사라진다. \n",
     "# 형태변환을 해줘야해서 그러나..? 왜 그렇게 했는지는 안나온다. "
@@ -247,8 +247,8 @@
    "source": [
     "BUFFER_SIZE = 50000 #전체 데이터가 5만장이기 때문에...전체데이터를 섞어서 넣어줄 것이기에! \n",
     "BATCH_SIZE = 256 #모델을 한번에 학습할 데이터의 양을 나타냅니다. 그냥 256으로 따라해봤다. \n",
-    "#이거 배치사이즈에 따라서 학습에 영향이 있나요?\n",
-    "#메모리 효율화를 위해서만 하는 것인가요? "
+    "#이거 배치사이즈에 따라서 학습에 영향이 있나요? 네!\n",
+    "#메모리 효율화를 위해서만 하는 것인가요? 아직은 모르겠네요!ㅎ"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "train_dataset = tf.data.Dataset.from_tensor_slices(train_x).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)\n",
     "print(train_dataset)\n",
     "#`from tensor_slices()`함수를 사용해서 텐서 자료형에서 데이터 셋을 만들 수 있음 이미지가 데이터 셋으로 만들어집니다. \n",
-    "#잘 섞으려면 buffer_size와 배치사이즈를 같게 만들어야 합니다. 왜인지는..아직..?ㅜ\n",
+    "#잘 섞으려면 buffer_size와 총데이터를 같게 만들어야 합니다. 왜인지는..아직..?ㅜ\n",
     "#여기에 train_dataset은 어떻게 생겼을까요???\n",
     "#잘섞여서 256개씩 잘 쌓여져 있겠죠?"
    ]
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "viral-practice",
+   "id": "regulated-trauma",
    "metadata": {},
    "source": [
     "![image](https://user-images.githubusercontent.com/68840414/110077365-52717d80-7dc9-11eb-843c-1083980a4bd5.png)"
@@ -557,7 +557,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 그냥 cross entropy를 불러오면 정규화시키는 sigmoid나 tanh함수같은 활성화함수가 없음. 그래서 모든 실숫값이 나오기에 binarycrossentropy를 사용\n",
+    "#sigmoid함수를 활용해서 0~1사이의 값으로 정규화시켜줍니다. \n",
     "cross_entropy = tf.keras.losses.BinaryCrossentropy(from_logits=True)"
    ]
   },
@@ -593,6 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#학습이 1로 나오면 위조지폐가 fake output과 real output의 차이가 크다는 의미. 좋지 않는 위조지폐가 만들어졌다는 의미. 서서히 0.5로 가는게 좋기에\n",
     "def discriminator_accuracy(real_output, fake_output):\n",
     "    real_accuracy = tf.reduce_mean(tf.cast(tf.math.greater_equal(real_output, tf.constant([0.5])), tf.float32))\n",
     "    fake_accuracy = tf.reduce_mean(tf.cast(tf.math.less(fake_output, tf.constant([0.5])), tf.float32))\n",
@@ -606,6 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 학습이 따로 이루어지기 때문에 optimizer를 따로 만들어줍니다. \n",
     "generator_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
     "discriminator_optimizer = tf.keras.optimizers.Adam(1e-4)"
    ]
@@ -628,8 +631,8 @@
     }
    ],
    "source": [
-    "noise_dim = 100\n",
-    "num_examples_to_generate = 16\n",
+    "noise_dim = 100 #100차원의 노이즈 생성\n",
+    "num_examples_to_generate = 16 #노이즈를 16개 만들자!\n",
     "\n",
     "seed = tf.random.normal([num_examples_to_generate, noise_dim])\n",
     "seed.shape"
@@ -651,8 +654,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "@tf.function\n",
+    "#데코레이터라고 부른다. \n",
+    "@tf.function #그냥 받으면 numpy array 형태인데 tensorflow graph로 변환\n",
     "def train_step(images):  #(1) 입력데이터\n",
     "    noise = tf.random.normal([BATCH_SIZE, noise_dim])  #(2) 생성자 입력 노이즈\n",
     "\n",
@@ -1003,10 +1006,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "theoretical-festival",
+   "id": "black-paraguay",
    "metadata": {},
    "source": [
     "# gan 기본이라도 알고가자.\n",
+    "![image](https://user-images.githubusercontent.com/68840414/110090248-6bcef580-7dda-11eb-9146-7d2b52dfa84a.png)\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -1018,7 +1022,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "swedish-baptist",
+   "id": "under-viking",
    "metadata": {},
    "source": [
     "discriminator모델:\n",
@@ -1034,7 +1038,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "romantic-george",
+   "id": "southwest-iraqi",
    "metadata": {},
    "source": [
     "# generator의 입장\n",
@@ -1049,7 +1053,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "upset-kitchen",
+   "id": "hollow-shape",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1062,7 +1066,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "impressed-identification",
+   "id": "emotional-scholar",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1075,7 +1079,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "express-hypothesis",
+   "id": "emotional-botswana",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -1088,10 +1092,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "little-communist",
+   "id": "civic-might",
    "metadata": {},
    "source": [
     "### discriminator에 들어가서 결과값이 1(진짜 돈)이라고 나오는게 목표이다.\n",
+    "![image](https://user-images.githubusercontent.com/68840414/110090248-6bcef580-7dda-11eb-9146-7d2b52dfa84a.png)\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -1103,7 +1108,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "premier-garage",
+   "id": "eligible-deviation",
    "metadata": {},
    "source": [
     "# discriminator모델 \n",
@@ -1117,7 +1122,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "primary-supervisor",
+   "id": "enhanced-grocery",
    "metadata": {},
    "source": [
     "## 수식으로 보는 gan\n",
@@ -1132,7 +1137,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "athletic-description",
+   "id": "fallen-alloy",
    "metadata": {},
    "source": [
     "# discriminator의 입장에서 보면!\n",
@@ -1151,7 +1156,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "covered-windsor",
+   "id": "proud-graduate",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -1165,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharing-terrorism",
+   "id": "gross-understanding",
    "metadata": {},
    "source": [
     "# generator입장\n",
@@ -1181,7 +1186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collective-somewhere",
+   "id": "center-snowboard",
    "metadata": {},
    "source": [
     "# loss function\n",
@@ -1192,7 +1197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-resistance",
+   "id": "familiar-blanket",
    "metadata": {},
    "source": [
     "2번 정답값이 원핫인코딩인 것만 쓸 수 있는 cross entropy\n",
@@ -1202,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "actual-antarctica",
+   "id": "entire-cursor",
    "metadata": {},
    "source": [
     "![image](https://user-images.githubusercontent.com/68840414/110076879-8dbf7c80-7dc8-11eb-940b-e0b912ccbe72.png)"
@@ -1211,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dynamic-tracker",
+   "id": "equal-imperial",
    "metadata": {},
    "outputs": [],
    "source": []
